# VeRend

./: .gitignore  CMakeLists.txt  README.md  justfile
engine/: CMakeLists.txt  config.h.in
engine/include/: config.h  engine.hpp
engine/src/: engine.cpp
lib/glad/include/glad/: gl.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
